--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@
 
   // font-weight
   --font-weight-primary: 400;
+  --font-weight-medium: 500;
 
   // font-size primary
   --font-size-d: 16px;
@@ -20,11 +21,12 @@
   --font-size-l-d: 36px;
   --font-size-l-m: 24px;
 
-  --font-size-m-d: 16px;
-  --font-size-m-m: 20px;
+  --font-size-m-d: 20px;
+  --font-size-m-t: 18px;
+  --font-size-m-m: 16px;
 
-  --font-size-s-d: 14px;
-  --font-size-s-m: 20px;
+  --font-size-s-d: 20px;
+  --font-size-s-m: 14px;
 
   --font-size-xs-d: 14px;
   --font-size-xs-m: 12px;
