--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  //max-width: 1440px;
   height: 100%;
   margin: 0 auto;
   padding-inline: clamp(1.875rem, -3.8393rem + 11.9048vw, 6.875rem);
+  overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
